# imss-engine-report

./: .env.example  .gitattributes  .gitignore  GITHUB_READY.md  README.md  audit.py  config.yaml  etl_imss.py  imss_csv_profiler.py  imss_csv_profiler_export.py  imss_duckdb_exports.py  imss_etl.py  join.py  pyproject.toml  requirements.txt  review.ipynb  viz.py
config/: config.example.yaml  config.yaml
docs/: business_rules_imss.md  data_dictionary.md  known_issues.md  plan_trabajo.md  postgresql_design.md  postgresql_loader_plan.md  restructure_notes.md  source_csv_housekeeping_plan.md
legacy/: main_analysis_legacy.py
scripts/: check_postgres_connection.py  check_postgres_schema.py  compare_imss_raw_aggregate.py  download_imss_period.py  plan_imss_publish.py  process_imss_raw.py  publish_imss_aggregate.py  run_audit.py  run_etl.py  run_exports.py  run_imss_historical_batch.py  run_postgres_loader.py  run_profile.py  run_single_period_pipeline.py  validate_imss_raw.py
sql/: 001_schema.sql  002_tables_core.sql  003_tables_catalogs.sql  004_indexes_constraints.sql  005_views_light_layer.sql
tests/: conftest.py  test_aggregate.py  test_concentrado.py  test_dimension_normalization.py  test_download.py  test_duckdb_audit.py  test_etl.py  test_historical_batch_planner.py  test_light_audit.py  test_manifest.py  test_metrics.py  test_normalize.py  test_postgres_config.py  test_postgres_loader_summary.py  test_publish_insert.py  test_publish_plan.py  test_raw_compare.py  test_raw_processing.py  test_raw_validation.py  test_schema.py  test_single_period_pipeline.py  (+1 more)
(+55 files in other folders)
